samples/_failures_safe/1761200827_881f66_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9c7741d.c: In function ‘main’:
./samples/SAFE/__tmp_d9c7741d.c:158: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_d9c7741d.c:157:9: error: expected declaration or statement at end of input
  157 |         if
      |         ^~
./samples/SAFE/__tmp_d9c7741d.c:157:9: error: expected declaration or statement at end of input
